--- a/fund_teorica.tex
+++ b/fund_teorica.tex
@@ -973,3 +973,9 @@ Onde:
 
 Como se pode ver é necessário iniciar o processo de atualização dos pesos da rede pela camada de saída. Na camada de saída da rede é o único lugar onde se sabe qual é a saída que cada \emph{perceptron} deveria ter. Para as camadas antecedentes a atualização deve ser feita em função dessas saídas. Portanto cada camada depende de parâmetros da camada seguinte na rede. Esse processo de atualização dos pesos iniciando pela ultima camada e voltando até a primeira recebe o nome de \emph{back propagation}. O método mencionado anteriormente recebe o nome de \emph{delta rule}, no entanto existem diversos métodos diferentes mas que utilizam a mesma estratégia de propagação das correções na rede. Todos esses métodos são classificados como métodos de \emph{back propagation}.
 
+\section{Considerações} \label{sec:consideracoes}
+
+% fechamento com relacao aos objetivos do capitulo
+% deve ser parte da conclusao final
+% podem aparecer consideracoes pessoais
+TODO.
