--- a/desenvolvimento.tex
+++ b/desenvolvimento.tex
@@ -7,15 +7,54 @@ A figura \ref{fig:desenv_overview} apresenta uma visão geral do sistema desenvol
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=1\textwidth]{./figs/visao_geral.png}
+	\includegraphics[width=1\textwidth]{./figs/visao_geral.jpg}
 	\caption{Visão geral do sistema desenvolvido.}
 	\fonte{Autoria própria}
 	\label{fig:desenv_overview}
 \end{figure}
 
+O capitulo divide-se em oito seções. As primeiras seis seções apresentam os blocos da figura \ref{fig:desenv_overview}: A seção \ref{sec:desenv_seg1} e a seção \ref{sec:desenv_seg2} mostram como os conceitos da seção \ref{sec:segmentacao} foram aplicados para segmentar a imagem capturada. A seção \ref{sec:desenv_desc1} e a seção \ref{sec:desenv_desc2} apresentam como os descritores de \emph{fourier} e as propriedades estudados na seção  \ref{sec:descricao} foram aplicados para formar um descritor para as imagens. As seções \ref{sec:desenv_class1} e \ref{sec:desenv_class2} apresentam como os descritores foram utilizados para classificar e determinar o ângulo das imagens.
+Na seção \ref{sec:desenv_class3} apresenta-se o processo de treinamento do sistema e ao final, na seção \ref{sec:desenv_consideracoes}, algumas considerações sobre o desenvolvimento do projeto.
 
 
- O capitulo divide-se em três seções. 
+\section{Segmentação: etapa 1} \label{sec:desenv_seg1}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.8\textwidth]{./figs/segmentacao_1.jpg}
+	\caption{Primeira etapa da segmentação.}
+	\fonte{Autoria própria}
+	\label{fig:desenv_seg1}
+\end{figure}
+
+\section{Segmentação: etapa 2} \label{sec:desenv_seg2}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.9\textwidth]{./figs/segmentacao_2.jpg}
+	\caption{Segunda etapa da segmentação.}
+	\fonte{Autoria própria}
+	\label{fig:desenv_seg1}
+\end{figure}
+
+\section{Descrição: etapa 1} \label{sec:desenv_desc1}
+
+\section{Classificação: etapa 1} \label{sec:desenv_class1}
+
+\section{Descrição: etapa 2} \label{sec:desenv_desc2}
+
+\section{Classificação: etapa 2} \label{sec:desenv_class2}
+
+\section{Classificação: treinamento} \label{sec:desenv_class3}
+
+\section{Considerações} \label{sec:desenv_consideracoes}
+% fechamento com relacao aos objetivos do capitulo
+% deve ser parte da conclusao final
+% podem aparecer consideracoes pessoais
+
+
+
+
 
 A seção \ref{sec:segmentacao} apresenta técnicas e algoritmos que serão úteis para para realizar a segmentação de imagens. A segmentação de imagens consiste em subdividir a imagem original em regiões ou objetos até que se tenha identificado a região ou objeto de interesse.
 
@@ -25,10 +64,7 @@ Finalmente a seção \ref{sec:classificacao} apresenta uma visão geral de reconhec
 
 
 
-\section{Considerações} \label{sec:consideracoes}
-% fechamento com relacao aos objetivos do capitulo
-% deve ser parte da conclusao final
-% podem aparecer consideracoes pessoais
+
 
 
 
